Fixed minor element alignment problems.

--- a/css/foodMenu.css
+++ b/css/foodMenu.css
@@ -8,7 +8,7 @@ div#heroText{
   width: 25%;
   height: 120px;
   position: absolute;
-  left: 72%; /*relative to page left side of div*/
+  left: 71.6%; /*relative to page left side of div*/
   top: 450px; /*relative to entire page length from top*/
   padding: 10px;
 }
