--- a/css/location.css
+++ b/css/location.css
@@ -8,7 +8,7 @@ div#heroText{
   width: 25%;
   height: 120px;
   position: absolute;
-  left: 72%; /*relative to page left side of div*/
+  left: 71.6%; /*relative to page left side of div*/
   top: 450px; /*relative to entire page length from top*/
   padding: 10px;
 }
@@ -19,6 +19,7 @@ div.main h1{
 }
 div#featured{
   margin: auto;
+  height: 400px; /*maches containing image*/
   background-color: #333; /*Black*/
 }
 div#featured img{
@@ -29,9 +30,9 @@ div#featured img{
 
 /*css for supporting images*/
 div.subImage{
-  width: 36%;
+  width: 43.7%;
   display: inline-block;
-  padding: 0 5%;
+  padding: 0 3%;
 }
 div.subImage h2{
   text-align: center;
